# y2md

./: .gitignore  2025-10-24_dQw4w9WgXcQ_Rick_Astley_-_Never_Gonna_Give_You_Up__Official_Video___4K_Remaster_.md  AGENTS.md  CHANGELOG.md  Cargo.toml  DEEPSEEK_INTEGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  METADATA_ENHANCEMENT.md  PHASE1_COMPLETE.md  README.md  REFACTORING_PLAN.md  USABILITY_IMPROVEMENTS.md  config.example.toml  create_clean_lib.sh  download_model.sh  llm_formatting_new.rs  spec.md  test_formatting.rs
src/: diagnostics.rs  lib.rs  main.rs  setup.rs
