[package]
name = "y2md"
version = "0.1.1"
edition = "2021"
description = "YouTube to Markdown Transcriber"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
directories = "5.0"
form_urlencoded = "1.2"
chrono = { version = "0.4", features = ["serde"] }

# YouTube download integration
yt-dlp = "1.3"

# Audio processing
symphonia = "0.5"
shellexpand = "3.1"
uuid = { version = "1.0", features = ["v4"] }

# Configuration
config = "0.14"
toml = "0.8"

# Async streams
futures = "0.3"

# Whisper speech-to-text (optional - requires cmake)
whisper-rs = "0.15"

[dev-dependencies]
tempfile = "3.8"